-
Bug
-
Resolution: Done
-
P3: Somewhat important
-
4.8.2, 5.2.0 RC1
-
None
-
Mac OS X 10.6.8, Xcode 3.2.6, Qt/Cocoa 4.8.2
QMacPrintEngine is unable to support all of the possible PrintEnginePropertyKey keys, since some have no equivalent in the Mac printing system (e.g., PPK_ColorMode).
However collation and the document name are both supported, so could be handled with:
- PPK_CollateCopies, PMSetCollate(), available since 10.2
- PPK_DocumentName, PMPrintSettingsSetJobName(), available since 10.4
- is required for
-
QTBUG-25383 QtPrintSupport - macOS Issues
-
- Closed
-
For Gerrit Dashboard: QTBUG-27724 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
73184,2 | QPrintEngine - Fix Mac Document Name | stable | qt/qtbase | Status: ABANDONED | +2 | 0 |
73185,1 | QPrintEngine - Fix Mac Collate Copies | stable | qt/qtbase | Status: ABANDONED | +2 | 0 |