QPrintEngine - Fix Mac Document Name

Add support to the Mac print engine for set/get the Document Name using
the Job Name setting. Our documentation states this is one use that the
docuemnt name will be put to so is appropriate to be used.

Task-number: QTBUG-27724
Change-Id: I70b661a56a64bd85d05291cd59bd36292d783476